# To-do

./: index.html  pyproject.toml  todo.db
frontend/: index.html  main.js  style.css
frontend/html/: index.html  login.html  regis.html
frontend/style/: login.css
node/: .env  index.js  package-lock.json  package.json
node/models/: todo.js
node/routes/: todo.js
server/: main.py
server/database/: base.py  session.py
server/database/models/: todo.py  users.py
server/router/: auth.py  todo.py
server/schemas/: auth.py  notification.py  todo.py
server/security/: jwt.py
server/utils/: config.py
